[workspace]
resolver = "2"

members = [
	"native/pact_verifier_nif",
]

[profile.release]
debug = 2

[workspace.dependencies]
rustler = "0.37.2"
pact_verifier = { version = "1.3.3", default-features = false,  features = ["datetime", "plugins"]}
pact_models = "1.3.7"
serde_json = "1.0.148"
futures = "0.3.31"
regex = "1.12.2"
log = "0.4.29"
env_logger = "0.11.8"
tokio = { version = "1.49", features = ["rt"] }
