[workspace]
resolver = "2"

members = [
	"native/pact_verifier_nif",
]

[profile.release]
debug = 2

[workspace.dependencies]
rustler = "0.37.2"
pact_verifier = { version = "1.3.3", default-features = false,  features = ["datetime", "plugins"]}
pact_models = "1.3.8"
bytes = "1.10.0"
either = "1.15.0"
serde_json = "1.0.149"
futures = "0.3.32"
regex = "1.12.2"
log = "0.4.29"
env_logger = "0.11.9"
tokio = { version = "1.49", features = ["rt"] }
