[package]
name = "pact_verifier_nif"
version = "0.1.0"
edition = "2024"

[lib]
name = "pact_verifier_nif"
crate-type = ["cdylib"]

[dependencies]
rustler.workspace = true
pact_verifier.workspace = true
pact_models.workspace = true
serde_json.workspace = true
futures.workspace = true
log.workspace = true
env_logger.workspace = true
regex.workspace = true
tokio.workspace = true
bytes.workspace = true
either.workspace = true
